[tool.poetry]
name = "tau"
version = "0.1.0"
description = ""
authors = ["fuffes <shamrey02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
selenium = "^4.9.0"
pytest-xdist = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
